2007-09-19  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-smiley-manager.c: Fix a leak.

2007-09-11  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-main-window.c:
	* libempathy-gtk/empathy-group-chat.c:
	* libempathy-gtk/empathy-contact-list-view.c:
	* libempathy-gtk/empathy-contact-list-view.h:
	* doc/libempathy-gtk/tmpl/empathy-contact-list-view.sgml: "interactive"
	property on EmpathyContactListView to enable/disable contect menu and
	action when double-click on a contact.

2007-09-10  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy/empathy-contact-factory.c: Fix debug message.

	* libempathy/Makefile.am:
	* configure.ac: Remove useless code.

2007-09-08  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-contact-list-view.c:
	* libempathy-gtk/empathy-chat-window.c: Request media channel when
	clicking on call icon.

2007-09-08  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-images.h:
	* libempathy-gtk/empathy-chat.glade:
	* libempathy-gtk/empathy-cell-renderer-activatable.c:
	* libempathy-gtk/empathy-cell-renderer-activatable.h:
	* libempathy-gtk/empathy-contact-list-view.c:
	* libempathy-gtk/empathy-contact-list-store.c:
	* libempathy-gtk/empathy-contact-list-store.h:
	* libempathy-gtk/Makefile.am:
	* libempathy-gtk/empathy-chat-window.c:
	* libempathy/empathy-contact.c:
	* libempathy/empathy-contact.h: Adding UI to start a VoIP call. It does
	nothing yet. Most of the code is ported from Gossip patch
	(Raphael Slinckx, Xavier Claessens).

2007-09-08  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy/empathy-contact.c:
	* libempathy/empathy-contact.h:
	* libempathy/empathy-contact-factory.c: Adding capabilities contact
	property.

2007-09-08  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-contact-list-view.c:
	* libempathy-gtk/empathy-contact-list-store.c: Make use of the search
	function to correctly find when typing in the contact list view.